compiler/testData/cli/jvm/_optIn/optInEmptyMessage.out
compiler/testData/cli/jvm/_optIn/optInEmptyMessage.kt:8:5: error: this declaration needs opt-in. Its usage must be marked with '@EmptyMarker' or '@OptIn(EmptyMarker::class)'
    foo()
    ^^^
COMPILATION_ERROR
